2015-06-23  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Load oci8/version.rb temporarily and delete OCI8.
	    Some 'bundler' tasks load 'ruby-oci8.gemspec' before 'require "oci8"'
	    and fail with 'TypeError: superclass mismatch for class OCI8.'
	    (github issue #80)

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* ruby-oci8.gemspec: Use ruby-oci8 version in lib/oci8/version.rb
	    instead of VERSION file to generate gem.
	    (github issue #79)

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* Makefile, dist-files, ext/oci8/extconf.rb, ext/oci8/oci8.c: Use
	   ruby-oci8 version in lib/oci8/version.rb instead of VERSION file.
	* VERSION: Deleted
	* lib/oci8/version.rb: Added
	* lib/oci8.rb, lib/oci8.rb.in: Renamed lib/oci8.rb to lib/oci8.rb.in.

2015-06-21  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/encoding-init.rb: Get Oracle client charset name from
	    the environment handle instead of NLS_LANG.

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h: Fix a compilation error.

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb: Change the default prefetch rows size 100.

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/extconf.rb: Delete an object file created by extconf.rb
	    before compilation.
	    (github issue #75)

2015-06-20  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/apiwrap.yml, ext/oci8/stmt.c:
	    Delete unreachable code which was created when Oracle 9i support was dropped.

2015-05-24  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/encoding.c: Add OCI8.charset_name2id and OCI8.charset_id2name.
	    Mark OCI8#charset_name2id and OCI8#charset_id2name as deprecated.

2015-05-23  Kubo Takehiro  <kubo@jiubao.org>
	* ext/oci8/bind.c, ext/oci8/encoding.c, ext/oci8/error.c, ext/oci8/oci8.c,
	  ext/oci8/oci8lib.c, ext/oci8/ocidatetime.c, ext/oci8/stmt.c,
	  lib/oci8/metadata.rb, lib/oci8/properties.rb:
	    Drop Oracle 9i support.

2015-05-22  Kubo Takehiro  <kubo@jiubao.org>