@@ -1,3 +1,7 @@
+2015-06-26  Kubo Takehiro  <kubo@jiubao.org>
+	* lib/oci8.rb, lib/oci8/check_load_error.rb: Check the message of
+	    LoadError and raise more user-friendly message.
+
 2015-06-23  Kubo Takehiro  <kubo@jiubao.org>
 	* ruby-oci8.gemspec: Load oci8/version.rb temporarily and delete OCI8.
 	    Some 'bundler' tasks load 'ruby-oci8.gemspec' before 'require "oci8"'
